# chat_with_your_map_2

./: .env  Dockerfile  README.md  app.py  conversation.py  dataset_agent.py  docker-compose.yml  environment.yml  main_agent_pipeline.py  master_agent.py  preprocessing.py  pyproject.toml  query_expansion.py  test.py
components/: action_extractor_component.py  actiontype_agent.py  attribute_filter_component.py  buffer_analysis_component.py  combiner_component.py  conversational_responder.py  dataset_agent.py  distance_calculator_component.py  layer_extractor_component.py  location_agent.py  location_extractor_component.py  master_agent_component.py  master_pipeline.py  proximity_finder.py  query_router.py  routing_component.py  text_response_component.py  wfs_client.py
data/: csv datei.csv  csv.csv  jsonserv.py
