[tool.poetry]
name = "chat-with-your-map-2"
version = "0.1.0"
description = "Python Backend for the ChatWithYourMapApplication"
authors = ["MethodJules <julien.hofer@gv.hamburg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
haystack-ai = "^2.17.1"
dotenv = "^0.9.9"
geocoder = "^1.38.1"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
