[tool.poetry]
name = "chat-with-your-map-2"
version = "0.1.0"
description = "Python Backend for the ChatWithYourMapApplication"
authors = ["MethodJules <julien.hofer@gv.hamburg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
haystack-ai = "^2.17.1"
python-dotenv = "^1.0.0"
geocoder = "^1.38.1"
geopy = "^2.4.1"
pandas = "^2.3.3"
sentence-transformers = "^5.1.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
